# semantic_nav_mcp_server

./: QUICKSTART.md  README.md  example_mcp_config.json  pyproject.toml  start_server.sh  start_server_remote.sh  test_minimal_nav.py  test_nav_direct.py  test_navigation.py  test_relative_nav.py  test_server.py  waypoints.yaml
src/semantic_nav_mcp_server/: __init__.py  __main__.py  nav_client.py  nav_client.py.bak  server.py  waypoint_manager.py
src/semantic_nav_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_waypoint_manager.py
