[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-nav-mcp-server"
version = "1.0.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "MCP server for semantic navigation with named locations"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "anyio",
    "fastmcp>=2.12.3",
    "pyyaml>=6.0",
    "numpy>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/semantic_nav_mcp_server"

[project.scripts]
semantic_nav_mcp_server = "semantic_nav_mcp_server.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
